--- a/construmax/pom.xml
+++ b/construmax/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>javafx-fxml</artifactId>
             <version>26-ea+13</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>9.5.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
