--- a/construmax/pom.xml
+++ b/construmax/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>9.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.cdimascio</groupId>
+            <artifactId>dotenv-java</artifactId>
+            <version>3.2.0</version>
+       </dependency>
     </dependencies>
     <build>
         <plugins>
