--- a/construmax/pom.xml
+++ b/construmax/pom.xml
@@ -45,6 +45,18 @@
             <artifactId>dotenv-java</artifactId>
             <version>3.2.0</version>
        </dependency>
+       <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>7.0.0-RC1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.controlsfx/controlsfx -->
+        <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.2.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
