--- a/construmax/pom.xml
+++ b/construmax/pom.xml
@@ -74,6 +74,11 @@
             <version>8.0.1</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>html2pdf</artifactId>
+            <version>4.0.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
